@@ -23,9 +23,9 @@ part 'src/zlib/deflate.dart';
 part 'src/zlib/huffman_table.dart';
 part 'src/zlib/inflate.dart';
 part 'src/archive.dart';
+part 'src/archive_file.dart';
 part 'src/bzip2_decoder.dart';
 part 'src/bzip2_encoder.dart';
-part 'src/file.dart';
 part 'src/gzip_decoder.dart';
 part 'src/gzip_encoder.dart';
 part 'src/tar_decoder.dart';
